--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
 <h2>إضافة دين جديد</h2>
 
 <input id="dName" placeholder="الاسم">
+<input id="dItem" placeholder="المادة">   <!-- الحقل الجديد -->
 <select id="dType">
     <option value="مدين">مدين</option>
     <option value="مدان">مدان</option>
@@ -64,16 +65,18 @@ let debtsRef = db.ref("debts/" + userPhone);
 // إضافة دين جديد
 function addDebt(){
     let name = dName.value.trim();
+    let item = dItem.value.trim();  // المادة
     let type = dType.value;
     let amount = dAmount.value.trim();
 
-    if(name === "" || amount === ""){
+    if(name === "" || item === "" || amount === ""){
         alert("أكمل الحقول");
         return;
     }
 
     let debt = {
         name: name,
+        item: item,       // تخزين المادة
         type: type,
         amount: Number(amount),
         date: new Date().toLocaleDateString()
@@ -82,11 +85,12 @@ function addDebt(){
     debtsRef.push(debt);
 
     dName.value = "";
+    dItem.value = "";
     dAmount.value = "";
     render();
 }
 
-// عرض بحث
+// عرض نتائج البحث
 function render(){
     let search = searchName.value.trim();
 
@@ -105,6 +109,7 @@ function render(){
             html += `
             <div style="padding:10px;border:1px solid #aaa;border-radius:8px;margin-bottom:10px;background:#fff;">
                 <b>الاسم:</b> ${d.name}<br>
+                <b>المادة:</b> ${d.item}<br>
                 <b>النوع:</b> ${d.type}<br>
                 <b>المبلغ المتبقي:</b> ${d.amount}<br>
                 <b>التاريخ:</b> ${d.date}<br><br>
